# LD41

./: .gitignore  CMakeLists.txt  README.md
include/: LD41.hpp.in  LoadingState.hpp  MenuState.hpp  PlayingState.hpp  World.hpp
res/images/sprites/: bullet.aseprite  empty-turn.aseprite  full-turn.aseprite
res/images/tiles/: bush.aseprite  enemy.aseprite  grass.aseprite  gravel.aseprite  mountain.aseprite  mud.aseprite  player.aseprite  target.aseprite  tree.aseprite  water.aseprite
res/images/titles/: title.aseprite
src/: LoadingState.cpp  MenuState.cpp  PlayingState.cpp  World.cpp  main.cpp
